--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -1,8 +1,9 @@
 @import './variables.scss';
 
-@mixin colorBtn($color) {
+@mixin colorBtn($color) {//定义一个可以在整个样式表中重复使用的样式
   background: $color;
 
+  // & 表示当前选择器本身
   &:hover {
     color: $color;
 
@@ -14,7 +15,7 @@
 }
 
 .blue-btn {
-  @include colorBtn($blue)
+  @include colorBtn($blue)//@include 可以将混入 @mixin引入到文档中
 }
 
 .light-blue-btn {
