--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,9 +1,10 @@
 #app {
 
   .main-container {
-    min-height: 100%;
+    min-height: calc(100% - $navBarHeight);
     transition: margin-left .28s;
     margin-left: $sideBarWidth;
+    margin-top: $navBarHeight;
     position: relative;
   }
 
@@ -11,7 +12,8 @@
     transition: width 0.28s;
     width: $sideBarWidth !important;
     background-color: $menuBg;
-    height: 100%;
+    height: calc(100% - 50px);
+    margin-top: 50px;
     position: fixed;
     font-size: 0px;
     top: 0;
@@ -152,6 +154,14 @@
     }
   }
 
+  .noneSidebar{
+    .sidebar-container{
+      display:none;
+    }
+    .main-container {
+      margin-left: 0px;
+    }
+  }
   .el-menu--collapse .el-menu .el-submenu {
     min-width: $sideBarWidth !important;
   }
