--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,11 +1,13 @@
 #app {
 
   .main-container {
-    min-height: calc(100% - $navBarHeight);
+    height: 100%;
     transition: margin-left .28s;
     margin-left: $sideBarWidth;
-    margin-top: $navBarHeight;
+    padding-top: $navBarHeight;
     position: relative;
+    width: calc(100% - $sideBarWidth);
+    overflow: hidden;
   }
 
   .sidebar-container {
@@ -156,7 +158,7 @@
 
   .noneSidebar{
     .sidebar-container{
-      display:none;
+      width: 0px !important;
     }
     .main-container {
       margin-left: 0px;
@@ -164,34 +166,6 @@
   }
   .el-menu--collapse .el-menu .el-submenu {
     min-width: $sideBarWidth !important;
-  }
-
-  // mobile responsive
-  .mobile {
-    .main-container {
-      margin-left: 0px;
-    }
-
-    .sidebar-container {
-      transition: transform .28s;
-      width: $sideBarWidth !important;
-    }
-
-    &.hideSidebar {
-      .sidebar-container {
-        pointer-events: none;
-        transition-duration: 0.3s;
-        transform: translate3d(-$sideBarWidth, 0, 0);
-      }
-    }
-  }
-
-  .withoutAnimation {
-
-    .main-container,
-    .sidebar-container {
-      transition: none;
-    }
   }
 }
 
